--- a/server/http.files/list.html
+++ b/server/http.files/list.html
@@ -6,7 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="icon" href="data:;base64,=">
 </head>
 <body>
 <main id="app">
