--- a/server/http.files/login.html
+++ b/server/http.files/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Авторизация</title>
+    <link rel="icon" href="data:;base64,=">
 </head>
 <body>
 
