--- a/server/http.files/login.html
+++ b/server/http.files/login.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Авторизация</title>
+    <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="data:;base64,=">
 </head>
 <body>
-
-<form action="/login">
-    <input type="text" name="login" id="login" placeholder="логин"/>
-    <input type="password" name="password" id="password" placeholder="пароль"/>
-    <input type="submit" name="submit" id="submit">
-</form>
-
+<div class="l_main">
+    <div class="login_form">
+        <div class="form_title">Авторизация</div>
+        <div class="input_holder">
+            <label for="login">Логин:</label>
+            <input type="text" name="login" id="login" />
+        </div>
+        <div class="input_holder">
+            <label for="password">Пароль:</label>
+            <input type="password" name="password" id="password"/>
+        </div>
+        <div class="sbm_holder">
+            <div class="sbm_button" id="sbm_but">Войти</div>
+        </div>
+        <div class="err_holder_login"></div>
+    </div>
+</div>
+<script type="application/javascript" src="public/js/jquery-3.3.0.min.js"></script>
+<script type="application/javascript" src="public/js/main.js"></script>
+<script type="application/javascript" src="public/js/login.js"></script>
 </body>
 </html>
