--- a/server/http.files/login.html
+++ b/server/http.files/login.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Авторизация</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="data:;base64,=">
 </head>
