client send key by ws

--- a/server/http.files/client.html
+++ b/server/http.files/client.html
@@ -14,18 +14,15 @@
         <div class="send_key_div">
             <div class="input_holder">
               <label for="srvAddress">Адрес сервера для запроса:</label>
-              <input type="text" name="srvAddress" id="srvAddress" value="http://localhost:8080/v1/addkey"/>
+              <input type="text" name="srvAddress" id="srvAddress" value="ws://localhost:8080/st_cpu"/>
             </div>
             <div class="client_key_holder">Ваш ключ: <span id="key"></span></div>
-            <div class="sbm_button mt_6">Отправить ключ</div>
+            <div class="sbm_button mt_6">Установить соединения</div>
             <div class="err_holder_login"></div>
+
             <div class="key_send_success">
                 Ваш ключ был успешно отправлен на сервер:<br/>
                 <span id="server_sended" class="fn_bold"></span><br/>
-                Адрес для подключение по websocket:<br/>
-                <span id="server_ws" class="fn_bold"></span><br/>
-
-                <div class="new_wb_conn mt_6">Установить соединения</div>
                 <div class="wb_server_connect mt_10">Загрузка ЦП сервера: <span id="server_CPU">--.--</span>%</div>
                 <pre class="wb_conn_info"></pre>
             </div>
