--- a/server/http_files/list.html
+++ b/server/http_files/list.html
@@ -14,27 +14,50 @@
     <div class="main_div">
         <h1>Список ключей</h1>
         <div class="button_sort_holder">
-            <div class="button_sr but_empty_k but_active f_l" @click="getListByStatus(0)">Запросы</div>
-            <div class="button_sr but_accept_k f_l" @click="getListByStatus(1)">Разрешенные</div>
-            <div class="button_sr but_blocked_k f_l"  @click="getListByStatus(2)">Заблокированные</div>
+            <div class="button_sr but_empty_k f_l"
+                 :class="{but_active: activeStatus == statuses.empty}"
+                 @click="getListByStatus(statuses.empty)">Запросы</div>
+            <div class="button_sr but_accept_k f_l"
+                 :class="{but_active: activeStatus == statuses.active}"
+                 @click="getListByStatus(statuses.active)">Разрешенные</div>
+            <div class="button_sr but_blocked_k f_l"
+                 :class="{but_active: activeStatus == statuses.blocked}"
+                 @click="getListByStatus(statuses.blocked)">Заблокированные</div>
+
+            <div class="button_sr but_all f_l"
+                 :class="{but_active: activeStatus == statuses.all}"
+                 @click="getListByStatus(statuses.all)">Все</div>
             <div class="clear"></div>
         </div>
 
         <div class="key_list" v-for="item in items">
             <div class="key_el">
+                <div class="key_val mb_10">Key: <span>{{item.Key}}</span> IP: <span>{{item.Ip}}</span></div>
                 <div class="key_val mb_10">User agent: <span>{{item.Name}}}</span></div>
-                <div class="key_val mb_10">IP: <span>{{item.Ip}}</span></div>
 
-                <div class="f_l w_150">
-                    <div class="key_lb lb_accept">разрешен</div>
-                    <div class="key_lb lb_blocked">заблокирован</div>
-                </div>
-                <div class="f_l w_300 mt_6">
-                    <div class="sm_button sb_accept f_l mr_10">Разрешить</div>
-                    <div class="sm_button sb_block f_l">Заблокировать</div>
+                <div class="w_300">
+                    <div class="sm_button sb_accept f_l mr_10" @click="openPopUp(item.Key, item.Name, statuses.active)" v-if="item.Status == 0 || item.Status == 2">Разрешить</div>
+                    <div class="sm_button sb_block f_l" @click="openPopUp(item.Key, item.Name, statuses.blocked)" v-if="item.Status == 0 || item.Status == 1">Заблокировать</div>
                     <div class="clear"></div>
                 </div>
-                <div class="clear"></div>
+
+                <div class="label_holder" v-if="item.Status != 0">
+                    <div class="key_lb lb_accept" v-if="item.Status == 1">разрешен</div>
+                    <div class="key_lb lb_blocked" v-if="item.Status == 2">заблокирован</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="pop_grey_bg" :class="{ d_block: popUpOpen }">
+        <div class="edit_dialog_pop">
+            <div class="close_form" @click="closePopUp"></div>
+            <div class="form_title">Редактирование</div>
+            <div class="input_holder">
+                <label for="el_name">Введите имя ключа:</label>
+                <input type="text" name="el_name" id="el_name" v-model.trim="editKey.name"/>
+                <div class="btn_set_status_key mt_10 mb_10"
+                     v-html="editButName"
+                     :class="{block_btn: editKey.status == statuses.blocked}">Отправить</div>
             </div>
         </div>
     </div>
