admin full functional add

--- a/server/http_files/list.html
+++ b/server/http_files/list.html
@@ -30,8 +30,9 @@
             <div class="clear"></div>
         </div>
 
-        <div class="key_list" v-for="item in items">
-            <div class="key_el">
+        <div class="key_list">
+            <div v-if="items == null || items.length === 0">Записей нет</div>
+            <div class="key_el" v-for="item in items">
                 <div class="key_val mb_10">Key: <span>{{item.Key}}</span> IP: <span>{{item.Ip}}</span></div>
                 <div class="key_val mb_10">User agent: <span>{{item.Name}}}</span></div>
 
@@ -57,7 +58,7 @@
                 <input type="text" name="el_name" id="el_name" v-model.trim="editKey.name"/>
                 <div class="btn_set_status_key mt_10 mb_10"
                      v-html="editButName"
-                     :class="{block_btn: editKey.status == statuses.blocked}">Отправить</div>
+                     :class="{block_btn: editKey.status == statuses.blocked}" @click="sendUpdateKey">Отправить</div>
             </div>
         </div>
     </div>
